--- a/index.html
+++ b/index.html
@@ -30,31 +30,68 @@
 </head>
 
 <body>
+	<style>
+		/* Media query untuk layar dengan lebar kurang dari 600px (misalnya perangkat seluler) */
+@media screen and (max-width: 600px) {
+  .balloons {
+    width: 60px; /* Mengatur ulang lebar elemen .balloons */
+    height: 110px; /* Mengatur ulang tinggi elemen .balloons */
+  }
+
+  .balloons h2 {
+    font-size: 30px; /* Mengatur ulang ukuran font pada elemen .balloons h2 */
+  }
+}
+	</style>
 	<div class="loading"></div>
 	<audio class="song" controls loop>
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">H</h2>
+    	<h2 style="color:#F2B300;">N</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">B</h2>
+    	<h2 style="color:#20CFB4;">O</h2>
     </div>
-	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">D</h2>
+    <div class="balloons text-center" id="b3">
+    	<h2 style="color:#0719D4;">V</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">X</h2>
+    	<h2 style="color:#D14D39;">I</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">O</h2>
+    	<h2 style="color:#8FAD00;"></h2>
     </div>
-    <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">L</h2>
+	<div class="balloons text-center" id="b6">
+    	<h2 style="color:#8377E4;">R</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">A</h2>
+    	<h2 style="color:#99C96A;">A</h2>
+    </div>
+    <div class="balloons text-center" id="b8">
+    	<h2 style="color:#20CFB4;">H</h2>
+    </div>
+    <div class="balloons text-center" id="b9">
+    	<h2 style="color:#F2B300;">M</h2>
+    </div>
+    <div class="balloons text-center" id="b10">
+    	<h2 style="color:#D14D39;">A</h2>
+    </div>
+    <div class="balloons text-center" id="b12">
+    	<h2 style="color:#0719D4;">D</h2>
+    </div>
+    <div class="balloons text-center" id="b13">
+    	<h2 style="color:#99C96A;">H</h2>
+    </div>
+    <div class="balloons text-center" id="b14">
+    	<h2 style="color:#8377E4;">A</h2>
+    </div>
+    <div class="balloons text-center" id="b15">
+    	<h2 style="color:#20CFB4;">N</h2>
+    </div>
+    <div class="balloons text-center" id="b16">
+    	<h2 style="color:#0719D4;">I</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -104,11 +141,17 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
+				<p>Hallo Novi...😊</p>
+				<p>Selamat Ulang Tahun yang ke 21th</p>
+				<p>Semoga diberi kesehatan selalu</p>
+				<p>Diperlancar segala urusanmu</p>
+				<p>Diperlancar TA nya</p>
+				<p>Makin jadi orang yang rajin & baik</p>
+				<p>Istirahat yang teratur ya, </p>
+				<p>Makin jadi orang yang rajin & baik</p>
+				<p>Jangan lupa healing ya kalo capek</p>
+				<p>Oiya, jangan lupa juga sholat tepat waktu</p>
+				<p>And </p>
 				<p><strong>however</strong></p>
 				<p>Do you know..?</p>
 				<p>today is just special</p>
@@ -120,6 +163,8 @@
 				<p>a piece of happiness to you</p>
 				<p>I made all this...</p>
 				<p>as a birthday present to you</p>
+				<p>Itu tadi hadiah dari aku</p>
+				<p>Semoga kamu suka, meskipun sesederhana itu, hehee..:)</p>
 				<p>thanks for being there</p>
 				<p>thanks for the friendship we made</p>
 				<p>thanks for everything</p>
@@ -156,14 +201,14 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="turn_on">Nyalakan Lampu</button>
+					<button class="btn btn-primary" id="play">Putar Musik</button>
+					<button class="btn btn-primary" id="bannar_coming">Lanjut</button>
+					<button class="btn btn-primary" id="balloons_flying">Lagi</button>
+					<button class="btn btn-primary" id="cake_fadein">Kue Buat Kamu</button>
+					<button class="btn btn-primary" id="light_candle">Nyalakan Lilin</button>
+					<button class="btn btn-primary" id="wish_message">Selamat Ulang Tahun</button>
+					<button class="btn btn-primary" id="story">Terakhir</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
